<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndCast</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="title_checkbox_twitch">Enable</string>
    <string name="summary_checkbox_twitch">Stream your screen to Twitch</string>
    <string name="twitch_preferences">Twitch</string>
    <string name="title_twitch_stream_key">Stream key</string>
    <string name="summary_twitch_stream_key">Stream key from your Twitch dashboard</string>

    <string name="youtube_preferences">YouTube</string>
    <string name="title_checkbox_youtube">Enable</string>
    <string name="summary_checkbox_youtube">Stream your screen to YouTube</string>
    <string name="title_youtube_stream_key">Stream key</string>
    <string name="summary_youtube_stream_key">Stream key from your YouTube dashboard</string>

    <string name="sdcard_preferences">SD Card</string>
    <string name="title_checkbox_sdcard">Enable</string>
    <string name="summary_checkbox_sdcard">Stream your screen to SD Card</string>
    <string name="title_sdcard_stream_key">Stream key</string>
    <string name="summary_sdcard_stream_key">Stream key from your SD Card dashboard</string>


</resources>
