<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/twitch_preferences">
        <CheckBoxPreference
            android:key="checkbox_twitch"
            android:title="@string/title_checkbox_twitch"
            android:summary="@string/summary_checkbox_twitch"
            android:defaultValue="false"
             />
        <EditTextPreference
            android:key="twitch_stream_key"
            android:title="@string/title_twitch_stream_key"
            android:summary="@string/summary_twitch_stream_key"
            android:defaultValue=""
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="YouTube">
        <CheckBoxPreference
            android:key="checkbox_youtube"
            android:title="@string/title_checkbox_youtube"
            android:summary="@string/summary_checkbox_youtube"
            android:defaultValue="false"
            />
        <EditTextPreference
            android:key="youtube_stream_key"
            android:title="@string/title_youtube_stream_key"
            android:summary="@string/summary_youtube_stream_key"
            android:defaultValue=""
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="Store on SD Card">
        <CheckBoxPreference
            android:key="checkbox_sdcard"
            android:title="@string/title_checkbox_sdcard"
            android:summary="@string/summary_checkbox_sdcard"
            android:defaultValue="false"
            />
        <EditTextPreference
            android:key="sdcard_folder"
            android:title="@string/title_sdcard_folder"
            android:summary="@string/summary_sdcard_folder"
            android:defaultValue=""
            />

    </PreferenceCategory>
</PreferenceScreen>